--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vue/vue3-jest": "^28.0.0",
+    "axios": "^0.27.2",
     "core-js": "^3.8.3",
     "vue": "^3.2.13"
   },
@@ -19,13 +21,15 @@
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-plugin-unit-jest": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "@vue/compiler-sfc": "^3.2.37",
     "@vue/eslint-config-airbnb": "^6.0.0",
     "@vue/test-utils": "^2.0.0-0",
-    "@vue/vue3-jest": "^27.0.0-alpha.1",
+    "vue3-jest": "^27.0.0-alpha.1",
     "babel-jest": "^27.0.6",
     "eslint": "^7.32.0",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-vue": "^8.0.3",
+    "vue-jest": "^5.0.0-0",
     "eslint-plugin-vuejs-accessibility": "^1.1.0",
     "jest": "^27.0.5"
   }
